<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.payplus</groupId>
    <artifactId>payplus-mvc</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>payplus-common</module>
        <module>payplus-dao</module>
        <module>payplus-domain</module>
        <module>payplus-service</module>
        <module>payplus-web</module>
    </modules>

    <repositories>
        <repository>
            <id>nexus-aliyun</id>
            <name>nexus-aliyun</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <developers>
        <developer>
            <name>xiaoran</name>
            <email>1462386042@qq.com</email>
            <organization>xiaoran</organization>
            <organizationUrl>https://github.com/makiato1999</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.12</version>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>2.1.4</version>
            </dependency>
            <!-- # 多数据源路由配置
                 # mysql 5.x driver-class-name: com.mysql.jdbc.Driver    mysql-connector-java 5.1.34
                 # mysql 8.x driver-class-name: com.mysql.cj.jdbc.Driver mysql-connector-java 8.0.23-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.23</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>2.0.28</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.9</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>32.1.3-jre</version>
            </dependency>
            <dependency>
                <groupId>dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>1.6.1</version>
            </dependency>
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.18</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>0.9.1</version>
            </dependency>
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>4.4.0</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.15</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>3.26.0</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>retrofit</artifactId>
                <version>2.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>converter-jackson</artifactId>
                <version>2.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>adapter-rxjava2</artifactId>
                <version>2.9.0</version>
            </dependency>
            <!-- 支付宝沙箱支付对接文档：https://opendocs.alipay.com/common/02kkv7 -->
            <dependency>
                <groupId>com.alipay.sdk</groupId>
                <artifactId>alipay-sdk-java</artifactId>
                <version>4.38.157.ALL</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <java_jvm>
                    -Xms1G -Xmx1G -server
                    -XX:MaxMetaspaceSize=256M
                    -Xss256K
                    -Dspring.profiles.active=dev
                    -XX:+DisableExplicitGC
                    -XX:+UseG1GC
                    -XX:LargePageSizeInBytes=128m
                    -XX:+UseFastAccessorMethods
                    -XX:+HeapDumpOnOutOfMemoryError
                    -XX:HeapDumpPath=/export/Logs/payplus-boot
                    -Xloggc:/export/Logs/payplus-boot/gc-dev-payplus-boot.log
                    -XX:+PrintGCDetails -XX:+PrintGCDateStamps
                </java_jvm>
                <profileActive>dev</profileActive>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <java_jvm>
                    -Xms1G -Xmx1G -server <!--JVM 最小 / 最大堆内存为 1G-->
                    -XX:MaxMetaspaceSize=256M <!--控制类加载元空间上限-->
                    <!-- 控制的是 类元数据（比如类结构、方法元信息）在本地内存中最多可占用的空间，它不属于 JVM 的堆内存，也不属于“代”的范围，但它是“永久代”的替代方案。-->
                    <!---XX:MaxPermSize=256M    JDK 8 之后已经无效（Java 官方已经彻底废弃这个参数)-->
                    -Xss256K <!--每个线程的栈大小（较小能减少内存）-->
                    -Dspring.profiles.active=test <!--激活 Spring Boot 的配置文件 application-test.yml-->
                    -XX:+DisableExplicitGC <!--禁止 System.gc() 主动触发 GC-->
                    -XX:+UseG1GC <!--使用 G1 垃圾回收器（现代 JVM 推荐）-->
                    -XX:LargePageSizeInBytes=128m <!--大页内存支持（性能优化）-->
                    -XX:+UseFastAccessorMethods <!--加快 getter/setter 执行（微优化）-->
                    -XX:+HeapDumpOnOutOfMemoryError <!--OOM 时生成内存转储文件-->
                    -XX:HeapDumpPath=/export/Logs/payplus-boot <!--指定 OOM dump 的保存路径-->
                    -Xloggc:/export/Logs/payplus-boot/gc-test-payplus-boot.log <!--GC 日志路径-->
                    -XX:+PrintGCDetails -XX:+PrintGCDateStamps <!--打印 GC 详情和时间戳-->
                </java_jvm>
                <profileActive>test</profileActive>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <java_jvm>
                    -Xms6G -Xmx6G -server
                    -XX:MaxMetaspaceSize=256M
                    -Xss256K
                    -Dspring.profiles.active=prod
                    -XX:+DisableExplicitGC
                    -XX:+UseG1GC
                    -XX:LargePageSizeInBytes=128m
                    -XX:+UseFastAccessorMethods
                    -XX:+HeapDumpOnOutOfMemoryError
                    -XX:HeapDumpPath=/export/Logs/payplus-boot
                    -Xloggc:/export/Logs/payplus-boot/gc-prod-payplus-boot.log
                    -XX:+PrintGCDetails -XX:+PrintGCDateStamps
                </java_jvm>
                <profileActive>prod</profileActive>
            </properties>
        </profile>
    </profiles>

</project>
